<resources>
    <string name="app_name">ByteCrunch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Str_home">Home</string>
    <string name="Str_fav">Fav</string>
    <string name="Str_search">Search</string>
    <string name="Str_settings">Settings</string>


    <string name="Str_settings_title">Preference</string>
    <string name="Str_themes">Theme Selections</string>
    <string name="Str_light_theme">Light Theme</string>
    <string name="Str_dark_theme">Dark Theme</string>
    <string name="Str_contrast_theme">Contrast Theme</string>

    <string name="Str_font">Font Selections</string>
    <string name="Str_feedback">Feedback / Suggestions</string>
    <string name="Str_sendFeedback">Send Feedback</string>


    <string name="Str_continue">Continue Reading...</string>

</resources>