<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/ID_btm_bar_home"
        android:title="@string/Str_home"
        android:icon="@drawable/baseline_newspaper_24"/>

    <item android:id="@+id/ID_btm_bar_fav"
        android:title="@string/Str_fav"
        android:icon="@drawable/baseline_favorite_24" />

    <item android:id="@+id/ID_btm_bar_search"
        android:title="@string/Str_search"
        android:icon="@drawable/baseline_search_24" />

    <item android:id="@+id/ID_btm_bar_settings"
        android:title="@string/Str_settings"
        android:icon="@drawable/baseline_settings_24" />

<!--    <item android:id="@+id/newsDetailsFragment"-->
<!--        android:title="@string/Str_home"-->
<!--        android:icon="@drawable/baseline_newspaper_24"/>-->
</menu>