<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".SettingsFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Str_settings"
        android:textColor="?attr/text_color"
        android:textSize="40sp"
        android:fontFamily="?attr/title_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Str_themes"
        android:textColor="?attr/source_color"
        android:fontFamily="?attr/title_font"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/ID_theme_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/ID_theme_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/text_color"
            android:fontFamily="?attr/title_font"
            android:text="@string/Str_light_theme" />

        <RadioButton
            android:id="@+id/ID_theme_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/text_color"
            android:fontFamily="?attr/title_font"
            android:text="@string/Str_dark_theme" />

<!--        <RadioButton-->
<!--            android:id="@+id/ID_theme_contrast"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="?attr/text_color"-->
<!--            android:fontFamily="?attr/title_font"-->
<!--            android:text="@string/Str_contrast_theme" />-->
    </RadioGroup>

    <TextView
        android:id="@+id/ID_settings_font_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Str_font"
        android:textColor="?attr/source_color"
        android:fontFamily="?attr/title_font"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_theme_selection" />

    <Spinner
        android:id="@+id/ID_settings_font_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="?attr/title_font"
        android:textColor="?attr/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_settings_font_title" />


    <TextView
        android:id="@+id/ID_settings_feedback_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="?attr/title_font"
        android:text="@string/Str_feedback"
        android:textColor="?attr/source_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_settings_font_select" />

    <Spinner
        android:id="@+id/ID_settings_feedback_selection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="?attr/title_font"
        android:textColor="?attr/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/ID_settings_send_feedback"
        app:layout_constraintEnd_toStartOf="@+id/ID_settings_send_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ID_settings_send_feedback" />

    <Button
        android:id="@+id/ID_settings_send_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/dark_text_color"
        android:backgroundTint="@color/kinda_grey"
        android:text="@string/Str_sendFeedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_settings_feedback_title" />

</androidx.constraintlayout.widget.ConstraintLayout>